﻿Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

### 2018-06-15
	Fixed: Network status changes were not being informed as they should've been.
	Changed: Removed some pointless network device list updates and only marked the need for refreshing.
	Changed: Made some code paths exit early if they detect process they're dealing with having exited.
### 2018-06-08
	Fixed: Rare(?) crash if session lock monitor power down is enabled.
### 2018-06-03
	Fixed: Network tab does not update address when IP changes while the UI is open.
	Fixed: Network connected/disconnected log messages should no longer spam. This delays the messages for up to 15 seconds.
### 2018-06-01
	Fixed: Minor inconsequential crash during exit.
### 2018-05-26
	Changed: Less spammy logging when internet connection is disrupted.
### 2018-05-25
	Fixed: NullReferenceException at line 101
	Fixed: Default affinity strategy (limit) did not actually limit due to faults in bit flopping logics.
### 2018-05-23
	Added: Extra path cache/finding statistics on exit.
	Fixed: A fatal error related to failure to extract path from process module.
### 2018-05-21
	Changed: Dialog from component config now allows instant restarting of TM if so desired.
	Fixed: Problems with new unconfigured TM setups.
### 2018-05-20
	Added: ctrl-alt-shift-m global hotkey to free memory except from current foreground app. This is disabled by default and requires enabling via `Register global hotkeys` in Core.ini.
	Changed: A lot of internal scheduling was altered, hopefully to make TM more responsive.
	Fixed: Rolled back a change that provided extended version information due to it causing crashes on some systems. Cause is known, fix is not.
### 2018-05-19
	Fixed: Watchlist rule edit window allowed entering garbage in affinity strategy.
	Changed: Saving a watchlist rule does not delete the old.